--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -1,18 +1,16 @@
-
-<!--<div class="item clearfix row" ng-if="SettingsHome.data">
-  <div class="main pull-right col-md-9">
-    <div class="alert alert-danger alert-sm text-center"
-         ng-if="!SettingsHome.data.settings.apiKey">Please enter API Key to
-      find UV index
-    </div>
-  </div>
-</div>-->
 <br>
-<div class="item row clearfix">
-  <div class="labels col-md-3 padding-right-zero pull-left" style=" width: 42%;"  >
-    <span>Time between slides ( 0 - 99 seconds) </span>
+<div class="item row clearfix margin-top-fifteen">
+  <div class="labels col-md-4 padding-right-zero pull-left">
+    <span>Time Between Slides</span>
+    <span class="bf-tooltip margin-left-five">
+      <span class="tooltip-icon primary-bg">!</span>
+      <span class="tooltip-content tooltip-right">
+        <span class='tooltip-triangle'></span>
+        Choose a number in seconds (1-99) to set the auto-scroll interval between slides. Leave 0 to disable auto-scroll and allow manual scrolling.
+      </span>
+    </span>
   </div>
-  <div class="main col-md-9 pull-right" style=" width: 56%; float: right !important; ">
+  <div class="main col-md-8 pull-right" style="float: right !important; ">
     <input id="url" name="url" type="text" min="0" max="99" class="form-control"
            ng-model="SettingsHome.data.settings.speed"  number-mask>
   </div>
