--- a/control/design/templates/home.html
+++ b/control/design/templates/home.html
@@ -1,27 +1,23 @@
 
 <div class="item row clearfix margin-top-fifteen" style="padding-bottom: 2%">
-    <div class="labels col-md-3 padding-right-zero pull-left">
+    <div class="labels col-md-3 padding-right-zero pull-left tooltip-container">
         <span>Image Carousel Layout</span>
-        <span class="bf-tooltip margin-left-five">
-            <span class="tooltip-icon primary-bg">!</span>
-            <span class="tooltip-content tooltip-right">
-                <span class='tooltip-triangle'></span>
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
                 Choose how images display in the image carousel.
             </span>
         </span>
     </div>
-    <div class="main pull-right col-md-9 padding-left-zero row">
+    <div class="main pull-right col-md-9 padding-left-zero row d-flex flex-space-between">
         <div class="radio radio-primary radio-inline">
             <input id="channel" type="radio"
                    ng-model="DesignHome.data.design.mode"
                    ng-value="DesignHome.CAROUSAL_TYPE.WIDTH"
                    name="accountType" class="ng-pristine ng-untouched ng-valid" value="WideScreen">
-            <label for="channel">
-                Corp 
-                <span class="bf-tooltip margin-left-five">
-                    <span class="tooltip-icon primary-bg">!</span> 
-                    <span class="tooltip-content tooltip-bottom">
-                        <span class='tooltip-triangle'></span>
+            <label for="channel" class="tooltip-container">
+                Crop
+                <span class="btn-info-icon btn-primary">
+                    <span class="cp-tooltip-bottom">
                         <img class='margin-bottom-ten' src="../../resources/tooltip-crop.png" alt="Tooltip Crop">
                         Crop the image to maintain a 16:9 ratio, regardless of the image orientation.
                     </span>
@@ -33,12 +29,11 @@
                    ng-model="DesignHome.data.design.mode"
                    ng-value="DesignHome.CAROUSAL_TYPE.HEIGHT"
                    name="accountType" class="ng-pristine ng-untouched ng-valid" value="MobileScreen">
-            <label for="video">
+            <label for="video" class="tooltip-container">
                 Fill
                 <span class="bf-tooltip margin-left-five">
-                    <span class="tooltip-icon primary-bg">!</span>
-                    <span class="tooltip-content tooltip-bottom">
-                        <span class='tooltip-triangle'></span>
+                    <span class="btn-info-icon btn-primary">
+                        <span class="cp-tooltip-bottom">
                         <img class='margin-bottom-ten' src="../../resources/tooltip-fill.png" alt="Tooltip Fill">
                         Scale the image to fill the container without any surrounding space.
                     </span>
@@ -50,12 +45,10 @@
                    ng-model="DesignHome.data.design.mode"
                    ng-value="DesignHome.CAROUSAL_TYPE.FIT"
                    name="accountType" class="ng-pristine ng-untouched ng-valid" value="Fit">
-            <label for="fit">
+            <label class="tooltip-container" for="fit">
                 Fit
-                <span class="bf-tooltip margin-left-five">
-                    <span class="tooltip-icon primary-bg">!</span>
-                    <span class="tooltip-content tooltip-bottom">
-                        <span class='tooltip-triangle'></span>
+                <span class="btn-info-icon btn-primary">
+                    <span class="cp-tooltip-bottom">
                         <img class='margin-bottom-ten' src="../../resources/tooltip-fit.png" alt="Tooltip Fit">
                         Maintain the original image ratio while ensuring the entire image is visible.
                     </span>
