--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -1,11 +1,9 @@
 <br>
 <div class="item row clearfix margin-top-fifteen">
-  <div class="labels col-md-4 padding-right-zero pull-left">
+  <div class="labels col-md-4 padding-right-zero pull-left tooltip-container">
     <span>Time Between Slides</span>
-    <span class="bf-tooltip margin-left-five">
-      <span class="tooltip-icon primary-bg">!</span>
-      <span class="tooltip-content tooltip-right">
-        <span class='tooltip-triangle'></span>
+    <span class="btn-info-icon btn-primary">
+      <span class="cp-tooltip">
         Choose a number in seconds (1-99) to set the auto-scroll interval between slides. Leave 0 to disable auto-scroll and allow manual scrolling.
       </span>
     </span>
