fix: Removed the extra space in the settings tab

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -1,9 +1,8 @@
-<br>
 <div class="item row clearfix margin-top-fifteen">
   <div class="labels col-md-4 padding-right-zero pull-left tooltip-container">
     <span>Time Between Slides</span>
     <span class="btn-info-icon btn-primary">
-      <span class="cp-tooltip">
+      <span class="cp-tooltip-bottom">
         Choose a number in seconds (1-99) to set the auto-scroll interval between slides. Leave 0 to disable auto-scroll and allow manual scrolling.
       </span>
     </span>
